--- a/notebook/01-transformer_v01.ipynb
+++ b/notebook/01-transformer_v01.ipynb
@@ -52,14 +52,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import re\n",
+    "import glob\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 ETT Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_len = 96\n",
+    "label_len = 48\n",
+    "pred_len = 96\n",
+    "\n",
+    "flag = \"train\"\n",
+    "type_map = {\"train\": 0, \"val\": 1, \"test\": 2}\n",
+    "set_type = type_map[flag]\n",
+    "\n",
+    "# 'forecasting task, options:[M, S, MS];\n",
+    "#  M:multivariate predict multivariate,\n",
+    "#  S:univariate predict univariate,\n",
+    "#  MS:multivariate predict univariate'\n",
+    "task = \"M\"\n",
+    "use_scale = True\n",
+    "timeenc = 1\n",
+    "freq = \"h\"\n",
+    "target = \"OT\"\n",
+    "\n",
+    "data_path = \"../data/ETT-small/ETTh1.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "border1s = [0, 12 * 30 * 24 - seq_len, 12 * 30 * 24 + 4 * 30 * 24 - seq_len]\n",
+    "border2s = [12 * 30 * 24, 12 * 30 * 24 + 4 * 30 * 24, 12 * 30 * 24 + 8 * 30 * 24]\n",
+    "border1 = border1s[set_type]\n",
+    "border2 = border2s[set_type]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(data_path)\n",
+    "df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
+    "df = df.set_index(\"date\")\n",
+    "\n",
+    "if task == \"S\":\n",
+    "    df = df[[target]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "if use_scale:\n",
+    "    train_df = df[border1:border2]\n",
+    "    scaler.fit(train_df.values)\n",
+    "\n",
+    "    data = scaler.transform(df.values)\n",
+    "else:\n",
+    "    data = df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stamp_df = pd.DataFrame()\n",
+    "stamp_df[\"date\"] = df[border1:border2].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-07-01 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-07-01 01:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-07-01 02:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-07-01 03:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-07-01 04:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8635</th>\n",
+       "      <td>2017-06-25 19:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8636</th>\n",
+       "      <td>2017-06-25 20:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8637</th>\n",
+       "      <td>2017-06-25 21:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8638</th>\n",
+       "      <td>2017-06-25 22:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8639</th>\n",
+       "      <td>2017-06-25 23:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8640 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    date\n",
+       "0    2016-07-01 00:00:00\n",
+       "1    2016-07-01 01:00:00\n",
+       "2    2016-07-01 02:00:00\n",
+       "3    2016-07-01 03:00:00\n",
+       "4    2016-07-01 04:00:00\n",
+       "...                  ...\n",
+       "8635 2017-06-25 19:00:00\n",
+       "8636 2017-06-25 20:00:00\n",
+       "8637 2017-06-25 21:00:00\n",
+       "8638 2017-06-25 22:00:00\n",
+       "8639 2017-06-25 23:00:00\n",
+       "\n",
+       "[8640 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stamp_df['mon']"
    ]
   },
   {
