--- a/notebook/05-transformer_enc_dec_layer_v01.ipynb
+++ b/notebook/05-transformer_enc_dec_layer_v01.ipynb
@@ -504,6 +504,346 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Decoder Layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 line by line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_len = 96\n",
+    "label_len = 48\n",
+    "\n",
+    "x = embedding(x=batch[\"past_values\"], x_features=batch[\"past_time_features\"])\n",
+    "enc_out, attn = enc_layer(x)\n",
+    "\n",
+    "# decoder input\n",
+    "dec_inp = torch.zeros_like(batch[\"future_values\"][:, -pred_len:, :]).float()\n",
+    "dec_inp = torch.cat([batch[\"future_values\"][:, :label_len, :], dec_inp], dim=1).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dec embedding\n",
+    "emb_params = {\n",
+    "    \"c_in\": 7,\n",
+    "    \"d_model\": 512,\n",
+    "    \"embed_type\": \"time_features\",\n",
+    "    \"freq\": \"h\",\n",
+    "    \"dropout\": 0.1,\n",
+    "}\n",
+    "\n",
+    "dec_embedding = DataEmbedding(**emb_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# self & cross attention\n",
+    "attn_params = {\n",
+    "    \"d_model\": 512,\n",
+    "    \"n_heads\": 8,\n",
+    "    \"d_keys\": None,\n",
+    "    \"d_values\": None,\n",
+    "    \"scale\": None,\n",
+    "    \"attention_dropout\": 0.1,\n",
+    "    \"output_attention\": True,\n",
+    "}\n",
+    "\n",
+    "self_attention = Attention(**attn_params)\n",
+    "cross_attention = Attention(**attn_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropout = 0.1\n",
+    "activation = \"gelu\"\n",
+    "\n",
+    "\n",
+    "conv1 = nn.Conv1d(in_channels=d_model, out_channels=d_ff, kernel_size=1)\n",
+    "conv2 = nn.Conv1d(in_channels=d_ff, out_channels=d_model, kernel_size=1)\n",
+    "norm1 = nn.LayerNorm(d_model)\n",
+    "norm2 = nn.LayerNorm(d_model)\n",
+    "norm3 = nn.LayerNorm(d_model)\n",
+    "dropout = nn.Dropout(dropout)\n",
+    "activation = F.relu if activation == \"relu\" else F.gelu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = dec_embedding(dec_inp, batch[\"future_time_features\"])\n",
+    "\n",
+    "x = x + dropout(self_attention(queries=x, keys=x, values=x)[0])\n",
+    "x = norm1(x)\n",
+    "\n",
+    "x = x + dropout(cross_attention(queries=x, keys=enc_out, values=enc_out)[0])\n",
+    "y = x = norm2(x)\n",
+    "y = dropout(activation(conv1(y.transpose(-1, 1))))\n",
+    "y = dropout(conv2(y).transpose(-1, 1))\n",
+    "out = norm3(x + y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 DecoderLayer Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderLayer(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        self_attention: nn.Module,\n",
+    "        cross_attention: nn.Module,\n",
+    "        d_model: int,\n",
+    "        d_ff: int = None,\n",
+    "        dropout: float = 0.1,\n",
+    "        activation: str = \"relu\",\n",
+    "    ):\n",
+    "        super(DecoderLayer, self).__init__()\n",
+    "\n",
+    "        d_ff = d_ff or 4 * d_model\n",
+    "        self.self_attention = self_attention\n",
+    "        self.cross_attention = cross_attention\n",
+    "        self.conv1 = nn.Conv1d(in_channels=d_model, out_channels=d_ff, kernel_size=1)\n",
+    "        self.conv2 = nn.Conv1d(in_channels=d_ff, out_channels=d_model, kernel_size=1)\n",
+    "        self.norm1 = nn.LayerNorm(d_model)\n",
+    "        self.norm2 = nn.LayerNorm(d_model)\n",
+    "        self.norm3 = nn.LayerNorm(d_model)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.activation = F.relu if activation == \"relu\" else F.gelu\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor, enc_out: torch.Tensor):\n",
+    "        x = x + self.dropout(self.self_attention(queries=x, keys=x, values=x)[0])\n",
+    "        x = self.norm1(x)\n",
+    "\n",
+    "        x = x + self.dropout(\n",
+    "            self.cross_attention(queries=x, keys=enc_out, values=enc_out)[0]\n",
+    "        )\n",
+    "        y = x = self.norm2(x)\n",
+    "        y = self.dropout(self.activation(self.conv1(y.transpose(-1, 1))))\n",
+    "        y = self.dropout(self.conv2(y).transpose(-1, 1))\n",
+    "\n",
+    "        return self.norm3(x + y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dec_layer_params = {\n",
+    "    \"self_attention\": Attention(**attn_params),\n",
+    "    \"cross_attention\": Attention(**attn_params),\n",
+    "    \"d_model\": 512,\n",
+    "    \"d_ff\": 2048,\n",
+    "    \"dropout\": 0.1,\n",
+    "    \"activation\": \"gelu\",\n",
+    "}\n",
+    "\n",
+    "dec_layer = DecoderLayer(**dec_layer_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = dec_embedding(dec_inp, batch[\"future_time_features\"])\n",
+    "\n",
+    "out = dec_layer(x, enc_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 144, 512])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Decoder block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1 line by line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_dec_layers = 1\n",
+    "norm_layer = None\n",
+    "projection = None\n",
+    "\n",
+    "decoder_layers = nn.ModuleList(\n",
+    "    [DecoderLayer(**dec_layer_params) for _ in range(num_layers)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = dec_embedding(dec_inp, batch[\"future_time_features\"])\n",
+    "\n",
+    "for layer in decoder_layers:\n",
+    "    x = layer(x, enc_out)\n",
+    "\n",
+    "if norm_layer is not None:\n",
+    "    x = norm_layer(x)\n",
+    "\n",
+    "if projection is not None:\n",
+    "    x = projection(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 Decoder Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        dec_layers: list[nn.Module],\n",
+    "        norm_layer: nn.Module = None,\n",
+    "        projection: nn.Module = None,\n",
+    "    ):\n",
+    "        super(Decoder, self).__init__()\n",
+    "\n",
+    "        self.dec_layers = nn.ModuleList(dec_layers)\n",
+    "        self.norm_layer = norm_layer\n",
+    "        self.projection = projection\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor, enc_out: torch.Tensor):\n",
+    "        for dec_layer in self.dec_layers:\n",
+    "            x = dec_layer(x, enc_out)\n",
+    "\n",
+    "        if self.norm_layer is not None:\n",
+    "            x = self.norm_layer(x)\n",
+    "\n",
+    "        if self.projection is not None:\n",
+    "            x = self.projection(x)\n",
+    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_model = 512\n",
+    "num_dec_layers: int = 2\n",
+    "c_out = 7\n",
+    "\n",
+    "decoder = Decoder(\n",
+    "    dec_layers=[DecoderLayer(**dec_layer_params) for _ in range(num_dec_layers)],\n",
+    "    norm_layer=nn.LayerNorm(d_model),\n",
+    "    projection=nn.Linear(d_model, c_out),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = dec_embedding(dec_inp, batch[\"future_time_features\"])\n",
+    "\n",
+    "dec_out = decoder(x, enc_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 144, 7])"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec_out.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
