--- a/notebook/05-transformer_enc_dec_layer_v01.ipynb
+++ b/notebook/05-transformer_enc_dec_layer_v01.ipynb
@@ -355,6 +355,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 8, 96, 96])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attn.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -619,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,22 +667,28 @@
     "        self.activation = F.relu if activation == \"relu\" else F.gelu\n",
     "\n",
     "    def forward(self, x: torch.Tensor, enc_out: torch.Tensor):\n",
-    "        x = x + self.dropout(self.self_attention(queries=x, keys=x, values=x)[0])\n",
+    "        # 1. compute self attention\n",
+    "        new_x, dec_attn = self.self_attention(queries=x, keys=x, values=x)\n",
+    "        x = x + self.dropout(new_x)\n",
     "        x = self.norm1(x)\n",
     "\n",
-    "        x = x + self.dropout(\n",
-    "            self.cross_attention(queries=x, keys=enc_out, values=enc_out)[0]\n",
+    "        # 2. compute cross attention\n",
+    "        new_x, cross_attn = self.cross_attention(\n",
+    "            queries=x, keys=enc_out, values=enc_out\n",
     "        )\n",
+    "        x = x + self.dropout(new_x)\n",
     "        y = x = self.norm2(x)\n",
+    "\n",
+    "        # 3. positionwise feed forward\n",
     "        y = self.dropout(self.activation(self.conv1(y.transpose(-1, 1))))\n",
     "        y = self.dropout(self.conv2(y).transpose(-1, 1))\n",
     "\n",
-    "        return self.norm3(x + y)"
+    "        return self.norm3(x + y), dec_attn, cross_attn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,18 +706,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = dec_embedding(dec_inp, batch[\"future_time_features\"])\n",
     "\n",
-    "out = dec_layer(x, enc_out)"
+    "out, dec_attn, cross_attn = dec_layer(x, enc_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -700,13 +726,53 @@
        "torch.Size([32, 144, 512])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 8, 144, 144])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec_attn.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 8, 144, 96])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_attn.shape"
    ]
   },
   {
@@ -765,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,8 +849,11 @@
     "        self.projection = projection\n",
     "\n",
     "    def forward(self, x: torch.Tensor, enc_out: torch.Tensor):\n",
+    "        dec_attns, cross_attns = [], []\n",
     "        for dec_layer in self.dec_layers:\n",
-    "            x = dec_layer(x, enc_out)\n",
+    "            x, dec_attn, cross_attn = dec_layer(x, enc_out)\n",
+    "            dec_attns.append(dec_attn)\n",
+    "            cross_attns.append(cross_attn)\n",
     "\n",
     "        if self.norm_layer is not None:\n",
     "            x = self.norm_layer(x)\n",
@@ -792,12 +861,12 @@
     "        if self.projection is not None:\n",
     "            x = self.projection(x)\n",
     "\n",
-    "        return x"
+    "        return x, dec_attns, cross_attns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,18 +883,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = dec_embedding(dec_inp, batch[\"future_time_features\"])\n",
     "\n",
-    "dec_out = decoder(x, enc_out)"
+    "dec_out, dec_attns, cross_attns = decoder(x, enc_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +903,7 @@
        "torch.Size([32, 144, 7])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4,
   "vscode": {
