--- a/notebook/07-transformer_probabilistic_forecast_v01.ipynb
+++ b/notebook/07-transformer_probabilistic_forecast_v01.ipynb
@@ -213,16 +213,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([32, 144, 7])"
+       "tensor([[[-0.7532,  0.5016, -0.6780,  ..., -0.9313, -0.7630,  0.2696],\n",
+       "         [-0.7095,  1.0485, -0.3392,  ..., -0.5668, -1.0276,  0.3088],\n",
+       "         [-0.6347,  0.9774, -0.4741,  ..., -0.8312, -1.0052,  0.6853],\n",
+       "         ...,\n",
+       "         [-0.7334,  0.1655,  0.2394,  ..., -0.2001, -0.0030,  0.6181],\n",
+       "         [-0.5439,  0.6911,  0.4149,  ..., -0.2567,  0.3115,  0.1636],\n",
+       "         [-0.6202,  1.2147,  0.3297,  ..., -0.2797, -0.2696,  0.2670]],\n",
+       "\n",
+       "        [[ 0.1508, -0.3699, -1.1867,  ...,  0.1533,  0.1827, -0.7236],\n",
+       "         [-0.0193, -0.2874, -0.8082,  ..., -0.2953,  0.2752, -0.6535],\n",
+       "         [-0.1565, -0.5074, -0.8264,  ..., -0.1849,  0.0810, -0.1247],\n",
+       "         ...,\n",
+       "         [-0.4047, -0.2092,  0.2076,  ..., -0.0950,  0.4518,  0.2984],\n",
+       "         [-0.0614, -0.0345,  0.2961,  ..., -0.2699,  0.5922,  0.1125],\n",
+       "         [ 0.0262, -0.5969, -0.6184,  ..., -0.6735,  0.8110, -0.0223]],\n",
+       "\n",
+       "        [[ 0.6263, -0.0202,  0.3586,  ..., -0.4256,  0.2879,  0.0959],\n",
+       "         [ 0.6704,  0.1471,  0.8849,  ..., -0.0131,  0.2700,  0.1850],\n",
+       "         [ 0.6054,  0.4273,  1.1245,  ...,  0.3022,  0.3679,  0.0670],\n",
+       "         ...,\n",
+       "         [-0.1898, -0.3036, -0.0467,  ..., -0.5029,  0.8517,  0.3311],\n",
+       "         [-0.3617, -0.4721,  0.4521,  ..., -0.6517,  0.4727,  0.0571],\n",
+       "         [-0.0851, -0.4960,  0.2368,  ..., -0.4281,  0.9453,  0.4060]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[ 0.5066,  0.2875, -0.4566,  ...,  0.6936,  0.4517, -0.6536],\n",
+       "         [ 0.5206, -0.0479, -0.1048,  ...,  0.6837,  0.8698, -0.3314],\n",
+       "         [ 0.2199, -0.3503,  0.1105,  ...,  0.7729,  1.1579, -0.0391],\n",
+       "         ...,\n",
+       "         [-0.5006, -0.5970, -0.1321,  ..., -0.3105,  0.8760,  0.3272],\n",
+       "         [-0.3432, -0.4787, -0.0793,  ..., -0.1572,  0.4040,  0.4413],\n",
+       "         [ 0.0358, -0.6403,  0.2043,  ...,  0.2848,  0.4303,  0.8411]],\n",
+       "\n",
+       "        [[ 0.5048, -0.3215, -0.1932,  ...,  0.6297,  0.5926, -0.1957],\n",
+       "         [ 0.5404, -0.4257,  0.0917,  ...,  1.0734,  0.8090, -0.2408],\n",
+       "         [ 0.3754, -0.2139,  0.4552,  ...,  1.0944,  0.8732, -0.2735],\n",
+       "         ...,\n",
+       "         [-0.3765, -0.4508, -0.2621,  ..., -0.2218,  0.6719,  0.1050],\n",
+       "         [-0.7216, -0.3839, -0.1555,  ..., -0.1240,  0.8117,  0.1599],\n",
+       "         [ 0.1892, -0.8642, -0.0168,  ...,  0.5683,  1.1451,  0.3367]],\n",
+       "\n",
+       "        [[-0.0485,  0.2463, -0.5169,  ...,  0.9073,  0.3627, -0.5921],\n",
+       "         [ 0.5474, -0.5762, -0.0175,  ...,  0.6931,  0.7416, -0.4601],\n",
+       "         [ 0.4000, -0.4613,  0.3049,  ...,  0.9649,  1.0573, -0.5880],\n",
+       "         ...,\n",
+       "         [-0.5363, -0.5367, -0.1575,  ...,  0.1257,  0.8965,  0.1641],\n",
+       "         [-0.4987, -0.4884, -0.0153,  ..., -0.1090,  0.4365,  0.0560],\n",
+       "         [-0.0931, -0.4446,  0.2986,  ..., -0.0147,  0.4712,  0.5846]]],\n",
+       "       grad_fn=<ViewBackward0>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +291,7 @@
        "torch.Size([32, 144, 7])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
