--- a/notebook/07-transformer_probabilistic_forecast_v01.ipynb
+++ b/notebook/07-transformer_probabilistic_forecast_v01.ipynb
@@ -219,56 +219,91 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.7532,  0.5016, -0.6780,  ..., -0.9313, -0.7630,  0.2696],\n",
-       "         [-0.7095,  1.0485, -0.3392,  ..., -0.5668, -1.0276,  0.3088],\n",
-       "         [-0.6347,  0.9774, -0.4741,  ..., -0.8312, -1.0052,  0.6853],\n",
+       "tensor([[[ 1.4697e-01,  2.4226e-01,  5.7979e-01,  ...,  6.0425e-02,\n",
+       "           5.2178e-01, -9.6369e-01],\n",
+       "         [-4.5724e-01,  2.4037e-01,  3.7841e-01,  ..., -2.5933e-01,\n",
+       "          -1.4227e-01, -8.8774e-01],\n",
+       "         [-7.5708e-02,  4.1595e-01,  8.3183e-02,  ..., -9.3486e-02,\n",
+       "          -4.3231e-02, -1.0589e+00],\n",
        "         ...,\n",
-       "         [-0.7334,  0.1655,  0.2394,  ..., -0.2001, -0.0030,  0.6181],\n",
-       "         [-0.5439,  0.6911,  0.4149,  ..., -0.2567,  0.3115,  0.1636],\n",
-       "         [-0.6202,  1.2147,  0.3297,  ..., -0.2797, -0.2696,  0.2670]],\n",
+       "         [-4.2479e-01, -4.7453e-01, -1.8556e-01,  ..., -2.9091e-01,\n",
+       "          -4.2509e-01,  2.9490e-01],\n",
+       "         [-8.1531e-01, -2.8585e-01, -4.5066e-01,  ..., -2.7453e-01,\n",
+       "          -5.0399e-01,  1.7170e-01],\n",
+       "         [ 2.8647e-01,  1.9075e-01, -3.4138e-01,  ...,  4.4736e-01,\n",
+       "          -3.9099e-01, -5.8855e-01]],\n",
        "\n",
-       "        [[ 0.1508, -0.3699, -1.1867,  ...,  0.1533,  0.1827, -0.7236],\n",
-       "         [-0.0193, -0.2874, -0.8082,  ..., -0.2953,  0.2752, -0.6535],\n",
-       "         [-0.1565, -0.5074, -0.8264,  ..., -0.1849,  0.0810, -0.1247],\n",
+       "        [[ 5.0552e-01,  4.8843e-01,  9.7230e-01,  ..., -1.2926e+00,\n",
+       "          -6.2685e-01,  7.5700e-01],\n",
+       "         [-4.7728e-01, -1.4420e-01,  3.0957e-01,  ..., -1.0300e+00,\n",
+       "          -6.8098e-01,  1.2413e+00],\n",
+       "         [-4.6419e-01, -4.2672e-02,  5.7442e-01,  ..., -1.0454e+00,\n",
+       "          -4.6309e-01,  7.8459e-01],\n",
        "         ...,\n",
-       "         [-0.4047, -0.2092,  0.2076,  ..., -0.0950,  0.4518,  0.2984],\n",
-       "         [-0.0614, -0.0345,  0.2961,  ..., -0.2699,  0.5922,  0.1125],\n",
-       "         [ 0.0262, -0.5969, -0.6184,  ..., -0.6735,  0.8110, -0.0223]],\n",
+       "         [-5.0567e-01, -6.7127e-01,  1.9565e-01,  ..., -5.6719e-01,\n",
+       "          -2.6959e-01,  4.4313e-01],\n",
+       "         [-9.7654e-01,  1.6140e-01,  1.3528e-01,  ...,  4.7932e-02,\n",
+       "          -2.9380e-01,  6.9935e-01],\n",
+       "         [-2.6430e-01,  7.8346e-02,  7.3194e-01,  ..., -7.0833e-01,\n",
+       "          -8.1415e-01,  1.0296e+00]],\n",
        "\n",
-       "        [[ 0.6263, -0.0202,  0.3586,  ..., -0.4256,  0.2879,  0.0959],\n",
-       "         [ 0.6704,  0.1471,  0.8849,  ..., -0.0131,  0.2700,  0.1850],\n",
-       "         [ 0.6054,  0.4273,  1.1245,  ...,  0.3022,  0.3679,  0.0670],\n",
+       "        [[ 5.7993e-01,  6.7505e-01,  2.9367e-01,  ..., -6.1482e-01,\n",
+       "          -3.4163e-01, -3.8777e-01],\n",
+       "         [-3.6300e-01,  7.5226e-02,  4.7976e-01,  ..., -5.0079e-01,\n",
+       "          -5.6366e-01, -8.1866e-01],\n",
+       "         [-5.7684e-01,  9.9650e-01,  3.9541e-01,  ..., -4.0159e-01,\n",
+       "          -1.2314e-01, -7.8091e-01],\n",
        "         ...,\n",
-       "         [-0.1898, -0.3036, -0.0467,  ..., -0.5029,  0.8517,  0.3311],\n",
-       "         [-0.3617, -0.4721,  0.4521,  ..., -0.6517,  0.4727,  0.0571],\n",
-       "         [-0.0851, -0.4960,  0.2368,  ..., -0.4281,  0.9453,  0.4060]],\n",
+       "         [-7.2016e-01, -7.9047e-01,  5.3616e-02,  ..., -3.6548e-01,\n",
+       "          -6.2049e-01,  4.0749e-01],\n",
+       "         [-7.9199e-01, -3.6191e-01,  2.2725e-04,  ..., -2.3265e-01,\n",
+       "          -3.7970e-01,  1.0107e+00],\n",
+       "         [-7.1924e-02,  7.1689e-01,  4.4844e-01,  ..., -4.2246e-01,\n",
+       "          -4.3224e-01, -1.7250e-01]],\n",
        "\n",
        "        ...,\n",
        "\n",
-       "        [[ 0.5066,  0.2875, -0.4566,  ...,  0.6936,  0.4517, -0.6536],\n",
-       "         [ 0.5206, -0.0479, -0.1048,  ...,  0.6837,  0.8698, -0.3314],\n",
-       "         [ 0.2199, -0.3503,  0.1105,  ...,  0.7729,  1.1579, -0.0391],\n",
+       "        [[-4.8415e-01,  2.3515e-01,  1.7985e+00,  ..., -1.7001e+00,\n",
+       "          -6.7531e-01,  3.9779e-01],\n",
+       "         [ 3.2680e-01,  1.6424e-01,  1.3557e+00,  ..., -1.7118e+00,\n",
+       "          -3.6597e-01, -1.7837e-01],\n",
+       "         [ 8.4961e-02,  6.7324e-03,  8.8065e-01,  ..., -1.6418e+00,\n",
+       "          -7.4611e-01,  1.3725e-01],\n",
        "         ...,\n",
-       "         [-0.5006, -0.5970, -0.1321,  ..., -0.3105,  0.8760,  0.3272],\n",
-       "         [-0.3432, -0.4787, -0.0793,  ..., -0.1572,  0.4040,  0.4413],\n",
-       "         [ 0.0358, -0.6403,  0.2043,  ...,  0.2848,  0.4303,  0.8411]],\n",
+       "         [-8.5847e-01, -8.8060e-01, -2.1998e-01,  ..., -4.2720e-01,\n",
+       "          -7.8644e-01,  6.9345e-01],\n",
+       "         [-7.7164e-01, -8.1090e-01, -9.9511e-02,  ..., -9.9689e-02,\n",
+       "          -1.6103e-01,  7.3593e-01],\n",
+       "         [-8.2851e-01, -8.0983e-01, -8.6398e-02,  ..., -6.6645e-01,\n",
+       "          -4.3602e-01,  1.0590e+00]],\n",
        "\n",
-       "        [[ 0.5048, -0.3215, -0.1932,  ...,  0.6297,  0.5926, -0.1957],\n",
-       "         [ 0.5404, -0.4257,  0.0917,  ...,  1.0734,  0.8090, -0.2408],\n",
-       "         [ 0.3754, -0.2139,  0.4552,  ...,  1.0944,  0.8732, -0.2735],\n",
+       "        [[-8.6540e-01, -4.5070e-01,  5.5537e-02,  ..., -4.3636e-01,\n",
+       "          -7.7627e-01,  3.3436e-01],\n",
+       "         [-3.8079e-01, -5.0749e-01,  6.9294e-02,  ..., -5.9996e-01,\n",
+       "           2.2791e-01,  6.6860e-01],\n",
+       "         [-4.4822e-01, -3.9522e-01,  4.7236e-01,  ..., -4.5880e-01,\n",
+       "           2.2150e-01,  5.6902e-01],\n",
        "         ...,\n",
-       "         [-0.3765, -0.4508, -0.2621,  ..., -0.2218,  0.6719,  0.1050],\n",
-       "         [-0.7216, -0.3839, -0.1555,  ..., -0.1240,  0.8117,  0.1599],\n",
-       "         [ 0.1892, -0.8642, -0.0168,  ...,  0.5683,  1.1451,  0.3367]],\n",
+       "         [-5.4666e-01, -2.3600e-01,  4.1411e-01,  ...,  1.7585e-01,\n",
+       "          -3.6099e-01,  8.7800e-01],\n",
+       "         [-9.2519e-01, -5.7260e-01,  5.2710e-02,  ..., -1.6433e-02,\n",
+       "          -7.1128e-01,  9.3665e-01],\n",
+       "         [-1.5291e+00, -5.5656e-01, -6.5742e-01,  ...,  3.3618e-01,\n",
+       "          -4.1320e-01,  1.2712e+00]],\n",
        "\n",
-       "        [[-0.0485,  0.2463, -0.5169,  ...,  0.9073,  0.3627, -0.5921],\n",
-       "         [ 0.5474, -0.5762, -0.0175,  ...,  0.6931,  0.7416, -0.4601],\n",
-       "         [ 0.4000, -0.4613,  0.3049,  ...,  0.9649,  1.0573, -0.5880],\n",
+       "        [[ 1.2102e-01,  2.8000e-01,  3.4145e-01,  ..., -1.1051e+00,\n",
+       "           7.5321e-01, -9.6553e-02],\n",
+       "         [-5.6153e-01, -1.5703e-01,  2.5564e-01,  ..., -6.9261e-01,\n",
+       "           8.5259e-01,  3.1222e-01],\n",
+       "         [-6.0496e-01, -2.9305e-01,  1.5764e-01,  ..., -5.8503e-01,\n",
+       "           6.9474e-01, -4.5272e-01],\n",
        "         ...,\n",
-       "         [-0.5363, -0.5367, -0.1575,  ...,  0.1257,  0.8965,  0.1641],\n",
-       "         [-0.4987, -0.4884, -0.0153,  ..., -0.1090,  0.4365,  0.0560],\n",
-       "         [-0.0931, -0.4446,  0.2986,  ..., -0.0147,  0.4712,  0.5846]]],\n",
-       "       grad_fn=<ViewBackward0>)"
+       "         [-9.1414e-01, -6.5781e-01, -3.1883e-01,  ..., -1.7771e-01,\n",
+       "          -3.4911e-01,  5.0055e-01],\n",
+       "         [-1.5137e+00, -6.1366e-01, -9.3062e-02,  ..., -1.1614e-01,\n",
+       "          -4.9916e-01,  4.6139e-01],\n",
+       "         [-4.5508e-01,  1.9128e-01,  6.2452e-01,  ..., -2.3718e-02,\n",
+       "          -1.9031e-01,  2.2113e-01]]], grad_fn=<ViewBackward0>)"
       ]
      },
      "execution_count": 10,
