--- a/notebook/08-trainer_v01.ipynb
+++ b/notebook/08-trainer_v01.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,18 +99,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. DataModule"
+    "## 1. dm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "dm_params = {\n",
+    "    \"dataset_name\": \"ETT\",\n",
     "    \"data_path\": \"../data/ETT-small/ETTh1.csv\",\n",
-    "    \"task\": \"M\",\n",
+    "    \"task_type\": \"M\",\n",
     "    \"freq\": \"h\",\n",
     "    \"target\": \"OT\",\n",
     "    \"seq_len\": 96,\n",
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +145,6 @@
     "    [\n",
     "        \"task_name\",\n",
     "        \"pred_len\",\n",
-    "        \"seq_len\",\n",
-    "        \"num_class\",\n",
     "        \"enc_in\",\n",
     "        \"dec_in\",\n",
     "        \"c_out\",\n",
@@ -169,8 +168,6 @@
     "configs = Config(\n",
     "    task_name=\"long_term_forecast\",\n",
     "    pred_len=96,\n",
-    "    seq_len=None,\n",
-    "    num_class=None,\n",
     "    enc_in=7,\n",
     "    dec_in=7,\n",
     "    c_out=7,\n",
@@ -202,28 +199,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Trainer:\n",
-    "    def __init__(self, model, dm, config, scaler):\n",
+    "    def __init__(self, model, dm, config):\n",
     "        self.config = config\n",
-    "        self.nprocs = torch.cuda.device_count()\n",
     "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
-    "        # model\n",
-    "        self.model = model.to(self.device)\n",
-    "        self.model = nn.DataParallel(self.model)\n",
-    "        self.scaler = scaler\n",
+    "        self.grad_scaler = None\n",
+    "        if config.cuda.use_amp:\n",
+    "            self.grad_scaler = torch.cuda.amp.GradScaler()\n",
     "\n",
-    "        # datamodule(dm)\n",
+    "        # model\n",
+    "        if config.cuda.use_multi_gpu:\n",
+    "            self.model = nn.DataParallel(model, device_ids=config.cuda.device_ids)\n",
+    "        else:\n",
+    "            self.model = model.to(self.device)\n",
+    "\n",
+    "        # dm(datamodule)\n",
     "        self.dm = dm\n",
     "        self.train_loader = self.dm.train_dataloader()\n",
     "        self.val_loader = self.dm.val_dataloader()\n",
+    "        self.pred_len = self.config.dm.pred_len\n",
+    "        self.label_len = self.config.dm.label_len\n",
+    "        self.task_type = self.config.dm.task_type\n",
     "\n",
     "        # optimizer\n",
     "        self.optimizer, self.lr_scheduler = self.configure_optimizers()\n",
+    "\n",
+    "        # criterion\n",
+    "        self.criterion = nn.MSELoss()\n",
     "\n",
     "        # model-saving options\n",
     "        self.version = 0\n",
@@ -235,7 +242,7 @@
     "\n",
     "            self.save_path = os.path.join(\n",
     "                ckpt_dir,\n",
-    "                f\"version-{self.config.datamodule.dataset_name}-{self.version}\",\n",
+    "                f\"version-{self.version}-{self.config.model.task_name}-{self.config.dm.dataset_name.lower()}\",\n",
     "            )\n",
     "            if not os.path.exists(self.save_path):\n",
     "                os.makedirs(self.save_path)\n",
@@ -257,27 +264,12 @@
     "        self.best_result = {\"version\": self.version}\n",
     "\n",
     "    def configure_optimizers(self):\n",
-    "        params = [\n",
-    "            {\n",
-    "                \"params\": self.model.module.img_encoder.parameters(),\n",
-    "                \"lr\": self.config.train.img_encoder_lr,\n",
-    "            },\n",
-    "            {\n",
-    "                \"params\": self.model.module.text_encoder.parameters(),\n",
-    "                \"lr\": self.config.train.text_encoder_lr,\n",
-    "            },\n",
-    "            {\n",
-    "                \"params\": itertools.chain(\n",
-    "                    self.model.module.img_projection.parameters(),\n",
-    "                    self.model.module.text_projection.parameters(),\n",
-    "                ),\n",
-    "                \"lr\": self.config.train.proj_head_lr,\n",
-    "                \"weight_decay\": self.config.train.weight_decay,\n",
-    "            },\n",
-    "        ]\n",
     "        # optimizer\n",
-    "        optimizer = optim.AdamW(params, weight_decay=0.0)\n",
+    "        optimizer = optim.Adam(\n",
+    "            self.model.parameters(), lr=self.config.train.learning_rate\n",
+    "        )\n",
     "\n",
+    "        # lr_scheduler\n",
     "        lr_scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
     "            optimizer,\n",
     "            mode=\"min\",\n",
@@ -332,19 +324,50 @@
     "            desc=\"train_steps\",\n",
     "            total=len(self.train_loader),\n",
     "        ):\n",
-    "            batch = {k: v.to(self.device) for k, v in batch.items() if k != \"caption\"}\n",
+    "            batch = {k: v.to(self.device) for k, v in batch.items()}\n",
+    "\n",
+    "            # decoder input\n",
+    "            dec_inp = torch.zeros_like(\n",
+    "                batch[\"future_values\"][:, -self.pred_len :, :]\n",
+    "            ).float()\n",
+    "            dec_inp = torch.cat(\n",
+    "                [batch[\"future_values\"][:, : self.label_len, :], dec_inp], dim=1\n",
+    "            ).float()\n",
     "\n",
     "            self.optimizer.zero_grad()\n",
-    "            if self.config.dp.amp:\n",
+    "            if self.config.cuda.amp:\n",
     "                with torch.cuda.amp.autocast():\n",
-    "                    outputs = self.model(batch)\n",
-    "                    loss = outputs[\"loss\"].mean()\n",
-    "                self.scaler.scale(loss).backward()\n",
-    "                self.scaler.step(self.optimizer)\n",
-    "                self.scaler.update()\n",
+    "                    outputs = self.model(\n",
+    "                        past_values=batch[\"past_values\"],\n",
+    "                        past_time_features=batch[\"past_time_features\"],\n",
+    "                        future_values=dec_inp.to(self.device),\n",
+    "                        future_time_features=batch[\"future_time_features\"],\n",
+    "                    )\n",
+    "                    outputs = outputs[\"last_hidden_states\"]\n",
+    "\n",
+    "                    f_dim = -1 if self.task_type == \"MS\" else 0\n",
+    "                    predicts = outputs[:, -self.pred_len : f_dim :]\n",
+    "                    targets = batch[\"future_values\"][:, -self.pred_len :, f_dim:]\n",
+    "\n",
+    "                    loss = self.criterion(predicts, targets)\n",
+    "\n",
+    "                self.grad_scaler.scale(loss).backward()\n",
+    "                self.grad_scaler.step(self.optimizer)\n",
+    "                self.grad_scaler.update()\n",
     "            else:\n",
-    "                outputs = self.model(batch)\n",
-    "                loss = outputs[\"loss\"].mean()\n",
+    "                outputs = self.model(\n",
+    "                    past_values=batch[\"past_values\"],\n",
+    "                    past_time_features=batch[\"past_time_features\"],\n",
+    "                    future_values=dec_inp.to(self.device),\n",
+    "                    future_time_features=batch[\"future_time_features\"],\n",
+    "                )\n",
+    "                outputs = outputs[\"last_hidden_states\"]\n",
+    "\n",
+    "                f_dim = -1 if self.task_type == \"MS\" else 0\n",
+    "                predicts = outputs[:, -self.pred_len : f_dim :]\n",
+    "                targets = batch[\"future_values\"][:, -self.pred_len :, f_dim:]\n",
+    "\n",
+    "                loss = self.criterion(predicts, targets)\n",
     "                loss.backward()\n",
     "                self.optimizer.step()\n",
     "\n",
@@ -353,7 +376,7 @@
     "            self.global_step += 1\n",
     "            if self.global_step % self.eval_step == 0:\n",
     "                logging.info(\n",
-    "                    f\"[DDP Version {self.version} Epoch {epoch}] global step: {self.global_step}, train loss: {loss.item():.3f}\"\n",
+    "                    f\"[Version {self.version} Epoch {epoch}] global step: {self.global_step}, train loss: {loss.item():.3f}\"\n",
     "                )\n",
     "\n",
     "        train_loss = train_loss.avg\n",
@@ -383,21 +406,64 @@
     "                desc=\"valid_steps\",\n",
     "                total=len(self.val_loader),\n",
     "            ):\n",
-    "                batch = {\n",
-    "                    k: v.to(self.device) for k, v in batch.items() if k != \"caption\"\n",
-    "                }\n",
+    "                batch = {k: v.to(self.device) for k, v in batch.items()}\n",
     "\n",
-    "                outputs = self.model(batch)\n",
-    "                loss = outputs[\"loss\"].mean()\n",
+    "                # decoder input\n",
+    "                dec_inp = torch.zeros_like(\n",
+    "                    batch[\"future_values\"][:, -self.pred_len :, :]\n",
+    "                ).float()\n",
+    "                dec_inp = torch.cat(\n",
+    "                    [batch[\"future_values\"][:, : self.label_len, :], dec_inp], dim=1\n",
+    "                ).float()\n",
+    "\n",
+    "                outputs = self.model(\n",
+    "                    past_values=batch[\"past_values\"],\n",
+    "                    past_time_features=batch[\"past_time_features\"],\n",
+    "                    future_values=dec_inp.to(self.device),\n",
+    "                    future_time_features=batch[\"future_time_features\"],\n",
+    "                )\n",
+    "                outputs = outputs[\"last_hidden_states\"]\n",
+    "\n",
+    "                f_dim = -1 if self.task_type == \"MS\" else 0\n",
+    "                predicts = outputs[:, -self.pred_len : f_dim :]\n",
+    "                targets = batch[\"future_values\"][:, -self.pred_len :, f_dim:]\n",
+    "\n",
+    "                loss = self.criterion(predicts, targets)\n",
     "                val_loss.update(loss.item())\n",
     "\n",
     "        return val_loss.avg"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import omegaconf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_path = \"../src/config/transformer_config.yaml\"\n",
+    "config = omegaconf.OmegaConf.load(config_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "finsim",
+   "display_name": "Python 3.9.18 ('fedtracker')",
    "language": "python",
    "name": "python3"
   },
@@ -411,7 +477,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "095ffe90df4ca297051b97375d5904c113ac48c02dcabb78607607a5f0a97f85"
+   }
   }
  },
  "nbformat": 4,
